refactor: adjust HTML and CSS tag selector  according to rule 3.4 in html-and-css.md

--- a/style.css
+++ b/style.css
@@ -27,11 +27,6 @@ body {
   width: 500px;
   margin: 0 auto 0;
 }
-.task {
-  width: 56%;
-  display: inline-block;
-  flex-grow: 1
-}
 .wrap {
   display: flex;
 }
@@ -45,7 +40,7 @@ li, h3 {
 input,button  {
   outline: none;
 }
-button {
+.btn {
   background: none;
   border: 0px;
   color: #888;
@@ -54,7 +49,7 @@ button {
   font-family: Lato, sans-serif;
   cursor: pointer;
 }
-button:hover {
+.btn :hover {
   color: #3a3A3a;
 }
 
@@ -90,7 +85,7 @@ label[for="new-task"] {
   display: block;
   margin: 0 0 20px;
 }
-input#new-task {
+#new-task {
   width: 318px;
 }
 
@@ -106,41 +101,44 @@ li {
 li > * {
   vertical-align: middle;
 }
-li > input[type="checkbox"] {
+input[type="checkbox"] {
   margin: 0 10px;
 }
-li > label {
+.task {
+  width: 56%;
+  display: inline-block;
+  flex-grow: 1;
   padding-left: 10px;
   box-sizing: border-box;
   font-size: 18px;
   width: 226px;
 }
-li > input[type="text"] {
+input[type="text"] {
   width: 226px
 }
-button.delete img {
+.delete img {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
-button.delete img:hover {
+.delete img:hover {
   transform: rotateZ(0);
 }
 
 /* done */
-ul#done label {
+#done label {
   text-decoration: line-through
   color: #888;
 }
 
 /* Edit Task */
-ul li input[type=text] {
+input[type=text] {
   display:none
 }
-ul li.edit-mode input[type=text] {
+.edit-mode input[type=text] {
   display:inline-block;
   width:224px
 }
-ul li.edit-mode label {
+.edit-mode label {
   display:none;
 }
