--- a/style.css
+++ b/style.css
@@ -136,10 +136,10 @@ input[type="text"] {
 }
 
 /* Edit Task */
-input[type=text] {
+input[type="text"] {
   display: none;
 }
-.edit-mode input[type=text] {
+.edit-mode input[type="text"] {
   display: inline-block;
   width: 224px;
 }
